test/vm/fails/invalid_array_index.js

var test = [];
test["123"] = true;
